		- C343-175 - chatting to tame prisoners is fixed (thanks to Reddit user Nuclear_Winterfell)
		- C343-17 "After polymorphing into a xorn and returning to human form, player can be stuck in a pit that isn't there."
		- "Player polymorphed into Xorn is not trapped by pits but (s)he receives "You fall into a pit!" message" and other related buggy behaviours
		Patches are linked at http://nethackwiki.com/wiki/User:Bulwersator/UnNetHackPlus_bug_tracking
	* UnNetHack bug fixes
		- Angered quest guardians will no longer go berserk.
	* Flavour stuff
		- Far look during hallucination should be more amusing
		- New hallucinatory monsters, monster sounds (original ones and from NAO) and bottle types
		- More random gravestone epitaphs (from NAO and original ones)
		- More t-shirt messages (from NAO and original ones)
		- Names for player statues on Medusa level are now based on list of people petrified by Medusa on public servers instead of top ten local players.
		- Kobolds vs elves grudge added
		- Wands and Gain Ability 0.1 by Grunt
		- Trees planted on: quest levels of wizard and samurai, nymph level
		- Tree Cutting v1.0 by Michael Lehotay
	* Starting equipment changes
		- Gnomes may start with candles (idea from dnethack), and dwarves with pickaxe (from SporkHack)
		- Orcs start game with sickness potion (from Sporkhack)
		- Wizards may start with cloak of protection/invisibility/displacement/robe/oilskin cloak/alchemy smock (based on idea from Sporkhack)
		- Scroll of identify universally known (from SporkHack)
		- Wearing fedora increases luck of archaeologists
	* Nerfing
		- Increase chances of getting a golem from polypiling (idea from SporkHack)
		- The Eye of the Aethiopica energy production is no longer completely insane
		- Shopkeepers prefer save dungeons
	* Interface changes